--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "helmet": "3.9.0",
         "http-errors": "^1.6.3",
         "jsonwebtoken": "^8.5.1",
-        "lodash": "4.17.4",
+        "lodash": "^4.17.15",
         "mongoose": "5.0.0-rc1",
         "multer": "^1.4.1",
         "multer-s3": "^2.9.0",
