--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Starter kit for node-express-ts",
     "author": "Abhay Kumar <abhay.kumar@qed42.com>",
     "scripts": {
-        "build": "./node_modules/.bin/webpack",
+        "build": "tsc",
         "server": "tsc && npm run build && nodemon ./build/index.js",
         "start": "node ./build/index.js",
         "ts:watch": "tsc -w",
@@ -35,7 +35,7 @@
         "mongoose": "5.0.0-rc1",
         "multer": "^1.4.1",
         "multer-s3": "^2.9.0",
-        "ts-node": "^6.0.3"
+        "ts-node": "^6.2.0"
     },
     "devDependencies": {
         "@types/cron": "^1.3.0",
