--- a/package.json
+++ b/package.json
@@ -35,20 +35,24 @@
         "mongoose": "5.7.11",
         "multer": "^1.4.1",
         "multer-s3": "^2.9.0",
-        "ts-node": "^6.2.0"
+        "socket.io": "^3.0.1",
+        "socket.io-client": "^3.0.1",
+        "ts-node": "^6.2.0",
+        "websocket": "^1.0.32"
     },
     "devDependencies": {
-        "@types/cron": "^1.3.0",
-        "@types/ejs": "^2.6.1",
-        "@types/helmet": "0.0.42",
         "@types/body-parser": "1.16.8",
         "@types/compression": "0.0.36",
         "@types/cookie-parser": "1.4.1",
         "@types/cors": "2.8.3",
+        "@types/cron": "^1.3.0",
         "@types/debug": "0.0.31",
+        "@types/ejs": "^2.6.1",
         "@types/express": "4.11.0",
+        "@types/helmet": "0.0.42",
         "@types/mongoose": "4.7.32",
         "@types/node": "^8.10.38",
+        "@types/socket.io": "^2.1.11",
         "nodemon": "1.14.7",
         "source-map-loader": "^0.2.4",
         "ts-loader": "^5.3.1",
