--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "src"
     ],
     "dependencies": {
+        "@types/uuid": "^8.3.0",
         "bcrypt": "^3.0.4",
         "bcrypt-nodejs": "^0.0.3",
         "body-parser": "1.18.2",
@@ -32,12 +33,14 @@
         "http-errors": "^1.6.3",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
+        "moment": "^2.29.1",
         "mongoose": "5.7.11",
         "multer": "^1.4.1",
         "multer-s3": "^2.9.0",
         "socket.io": "^3.0.1",
         "socket.io-client": "^3.0.1",
         "ts-node": "^6.2.0",
+        "uuid": "^8.3.1",
         "websocket": "^1.0.32"
     },
     "devDependencies": {
