--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "@types/mongoose": "4.7.32",
         "@types/node": "^8.10.38",
         "@types/socket.io": "^2.1.11",
-        "nodemon": "1.14.7",
+        "nodemon": "^1.19.4",
         "source-map-loader": "^0.2.4",
         "ts-loader": "^5.3.1",
         "tslint": "5.8.0",
